--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MAROON</title>
+    <link rel="stylesheet" href="src/scss/pages.scss/_index1.scss" />
   </head>
   <body>
     <div class="test"></div>
