--- a/index.html
+++ b/index.html
@@ -4,14 +4,41 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MAROON</title>
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link rel="stylesheet" href="src/css/style.css" />
   </head>
   <body>
-    <!-- Модальное окно -->
+    <!-- Всплывающее модальнок окно начало-->
+    <div class="popup open_popup" id="popup">
+      <div class="popup__box animate__animated animate__fadeInDown">
+        <button class="popup-close-btn" id="popupClose">
+          <i class="fa-solid fa-xmark fa-xl"></i>
+        </button>
+        <h2>Адрес доставки</h2>
+        <p>Покажем актуальный ассортимент и сроки доставки для вашего адреса</p>
+        <select name="cityName" id="cityName">
+          <option value="Kazan">Казань</option>
+          <option value="Moskow">Москва</option>
+          <option value="Sankt-Peterburg">Санкт-Петербург</option>
+          <option value="Ekaretinburg">Екатеринбург</option>
+        </select>
+        <button type="submit" class="add-address" id="addAddress">
+          Добавить адрес
+        </button>
+      </div>
+    </div>
+
+    <!-- Всплывающее модальнок окно конец-->
+
+    <!-- Модальное окно  регистрации начало  -->
     <div class="modal" id="signUpModal" tabindex="-1">
       <div class="modal-dialog">
         <div class="modal-content">
@@ -460,6 +487,10 @@
       </div>
     </footer>
     <!--  -->
+    <script
+      src="https://kit.fontawesome.com/104ba3ab13.js"
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
