Created a modal requesting address

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     </header>
     <!--  -->
     <section class="bestsellers">
-      <div class="carousel">
+      <div class="carousel-1">
         <div class="bestsellers__description">
           <div class="bestsellers__title">Бестселлеры</div>
           <div class="bestsellers__text">
@@ -218,54 +218,57 @@
         <!--  -->
         <!-- <div class="swiper">
           <div class="swiper-wrapper"> -->
-        <div class="bestsellers__card bestsellers__card_1">
-          <div class="cartd__title">High</div>
-          <div class="card__subtitle">крем для лица</div>
+        <div class="carousel-2" id="slider">
+          <div class="bestsellers__card bestsellers__card_1">
+            <div class="cartd__title">High</div>
+            <div class="card__subtitle">крем для лица</div>
 
-          <a class="more" href="#">Подробнее</a>
-        </div>
-        <!--  -->
-        <div class="bestsellers__card bestsellers__card_2">
-          <div class="cartd__title">Rest</div>
-          <div class="card__subtitle">минеральная пудра</div>
+            <a class="more" href="#">Подробнее</a>
+          </div>
+          <!--  -->
 
-          <a class="more" href="#">Подробнее</a>
-        </div>
-        <!--  -->
-        <div class="bestsellers__card bestsellers__card_3">
-          <div class="cartd__title">Rose</div>
-          <div class="card__subtitle">крем для лица</div>
+          <div class="bestsellers__card bestsellers__card_2">
+            <div class="cartd__title">Rest</div>
+            <div class="card__subtitle">минеральная пудра</div>
 
-          <a class="more" href="#">Подробнее</a>
-        </div>
-        <!--  -->
-        <div class="bestsellers__card bestsellers__card_4">
-          <div class="cartd__title">Milk</div>
-          <div class="card__subtitle">масло для тела</div>
+            <a class="more" href="#">Подробнее</a>
+          </div>
+          <!--  -->
+          <div class="bestsellers__card bestsellers__card_3">
+            <div class="cartd__title">Rose</div>
+            <div class="card__subtitle">крем для лица</div>
 
-          <a class="more" href="#">Подробнее</a>
-        </div>
-        <!--  -->
-        <!-- <div class="bestsellers__card bestsellers__card_5">
-          <div class="cartd__title">High</div>
-          <div class="card__subtitle">крем для лица</div>
+            <a class="more" href="#">Подробнее</a>
+          </div>
+          <!--  -->
+          <div class="bestsellers__card bestsellers__card_4">
+            <div class="cartd__title">Milk</div>
+            <div class="card__subtitle">масло для тела</div>
 
-          <a class="more" href="#">Подробнее</a>
+            <a class="more" href="#">Подробнее</a>
+          </div>
+          <!--  -->
+          <div class="bestsellers__card bestsellers__card_1">
+            <div class="cartd__title">High</div>
+            <div class="card__subtitle">крем для лица</div>
+
+            <a class="more" href="#">Подробнее</a>
+          </div>
+          <!-- </div>
         </div> -->
-        <!-- </div>
-        </div> -->
+        </div>
       </div>
 
       <div class="arrows-container">
         <img
           class="arrow"
-          id="next"
+          id="prev"
           src="/public/images/left.svg"
           alt="стрелка налево"
         />
         <img
           class="arrow"
-          id="prev"
+          id="next"
           src="/public/images/right.svg"
           alt="стрелка направо"
         />
